--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,11 @@
 </head>
 
 <body>
+	<%- include("partials/header") %>
+		
 	<h1> JOE </h1>
+
+	<%- include("partials/footer") %>
 </body>
 
 </html>
