Finishes header and footer

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,5 @@
-<footer> 
-	<p> FOOTER </p>
-</footer>
+<section id="footer" class="gradient-background text-center py-">
+    <div class="d-flex justify-content-center">
+        <p class="mt-3">Thanks for using Grabby! (◕‿◕✿)</p>
+    </div>
+</section>
