--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,21 @@
-<header> 
-	<p> HEADER </p>
-</header>
+<section id="header" class="gradient-background">
+    <div class="container">
+        <header class="d-flex flex-wrap justify-content-between py-3">
+            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+                <!-- Add grabby logo here in the future -->
+				<img src="/images/logo.png" alt="grabby logo" class="main-logo me-3">
+                <span class="fs-4"><h1>Grabby</h1></span> 
+            </a>
+			
+			<div class="d-flex align-items-center">
+				<a href="https://ko-fi.com/muratkadi" target="_blank" class="d-flex align-items-center me-3"> <!-- Added me-3 for margin-right: 1rem; -->
+					<img src="/images/kofi_button_stroke.png" alt="support me on ko-fi" class="ko-fi">
+				</a>              
+				<a href="https://github.com/AhmetMuratAcar" target="_blank" class="d-flex align-items-center">
+					<img src="/images/github-mark-white.png" alt="github logo" class="circular-logo">
+				</a>
+			</div>			
+
+        </header>
+    </div>
+</section>
