--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,14 +4,20 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Blog</title>
-	<link rel="stylesheet" href="/styles/main.css">	
+	<title>Grabby</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+	<link rel="stylesheet" href="/styles/main.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="d-flex flex-column vh-100">
 	<%- include("partials/header") %>
-		
-	<h1> JOE </h1>
+
+	<section class="upload-section flex-grow-1">
+		<!-- <p>JOE</p> -->
+	</section>
 
 	<%- include("partials/footer") %>
 </body>
