--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
 <body class="d-flex flex-column vh-100">
 	<%- include("partials/header") %>
 
-	<section class="upload-section flex-grow-1">
+	<section id="upload-section" class="flex-grow-1">
 		<!-- <p>JOE</p> -->
 	</section>
 
