--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,13 +19,13 @@
 		<div class="container d-flex justify-content-center align-items-center h-100">
 			<div class="card p-4">
 				<h3 class="card-title">Upload Your Syllabus</h3>
+				<p>*PDFs only pls</p>
 				<form id="uploadForm" enctype="multipart/form-data" class="w-100">
-					<div class="form-group">
-						<input type="file" class="form-control-file" id="pdfFile" accept="application/pdf">
+					<div class="input-group input-group-sm mb-3">
+						<input type="file" class="form-control" id="pdfFile" accept="application/pdf">
 					</div>
-					<button type="submit" class="btn btn-primary">Upload</button>
+					<button type="submit" class="btn btn-primary btn-sm">Upload</button>
 				</form>
-				<p>PDFs only pls</p>
 			</div>
 		</div>
 	</section>	
