--- a/views/confirm.ejs
+++ b/views/confirm.ejs
@@ -1,1 +1,25 @@
-<!-- This page will contain all of the pulled dates and allow the user to edit them before submission -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Grabby</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+	<link rel="stylesheet" href="/styles/main.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
+</head>
+
+<body class="d-flex flex-column vh-100">
+	<%- include("partials/header") %>
+
+	<section id="confirm-section" class="flex-grow-1">
+        <p>Made it to results page</p>
+	</section>	
+
+	<%- include("partials/footer") %>
+</body>
+
+</html>
