Adds PDF parsing functionality.

--- a/views/confirm.ejs
+++ b/views/confirm.ejs
@@ -16,7 +16,8 @@
 	<%- include("partials/header") %>
 
 	<section id="confirm-section" class="flex-grow-1">
-        <p>Made it to results page</p>
+		<h1> UPLOADED SUCCESSFULLY </h1>
+		<p> <%= text %> </p>
 	</section>	
 
 	<%- include("partials/footer") %>
