--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,9 +20,9 @@
 			<div class="card p-4">
 				<h3 class="card-title">Upload Your Syllabus</h3>
 				<p>*PDFs only pls</p>
-				<form id="uploadForm" enctype="multipart/form-data" class="w-100" action="/upload" method="post">
+				<form id="uploadForm" enctype="multipart/form-data" class="w-100" action="/upload-pdf" method="post">
 					<div class="input-group input-group-sm mb-3">
-						<input type="file" class="form-control" id="pdfFile" accept="application/pdf">
+						<input type="file" class="form-control" id="pdfFile" name="pdfFile" accept="application/pdf">
 					</div>
 					<button type="submit" class="btn btn-primary btn-sm">Upload</button>
 				</form>
