Adds google Auth.

--- a/views/confirm.ejs
+++ b/views/confirm.ejs
@@ -57,7 +57,7 @@
 	<%- include("partials/footer") %>
 
 	<script src="/date-edit.js"></script>
-	<script src="/submission.js"></script>
+	<script type="module" src="/submission.js"></script>
 </body>
 
 </html>
